--- a/src/sk/spse/uloha1/declarative/primary.fxml
+++ b/src/sk/spse/uloha1/declarative/primary.fxml
@@ -1,28 +1,29 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
 <?import javafx.geometry.Insets?>
-<?import javafx.scene.control.Button?>
 <?import javafx.scene.control.Label?>
 <?import javafx.scene.control.TextField?>
 <?import javafx.scene.layout.HBox?>
+<?import javafx.scene.layout.VBox?>
 
-<HBox xmlns="http://javafx.com/javafx/21"
-      xmlns:fx="http://javafx.com/fxml/1"
-      fx:controller="sk.spse.uloha1.declarative.Controller"
-      alignment="CENTER"
-      spacing="20">
-
-    <padding>
-        <Insets topRightBottomLeft="10" />
-    </padding>
-
-    <Label text="Počítadlo:" />
-
-    <TextField fx:id="counterField"
-               text="0"
-               editable="false"
-               style="-fx-padding: 10 20 10 20;" />
-
-    <Button text="Plus 1"
-            onAction="#incrementCounter" />
-</HBox>
+<VBox xmlns="http://javafx.com/javafx/25" xmlns:fx="http://javafx.com/fxml/1" fx:controller="sk.spse.uloha1.declarative.Controller">
+   <children>
+      <HBox alignment="CENTER" spacing="20" style="-fx-padding: 10 50;">
+      
+          <padding>
+              <Insets topRightBottomLeft="10" />
+          </padding>
+          <Label text="Stupne Celsius     "/>
+          <TextField fx:id="cField" alignment="TOP_LEFT" editable="false" onKeyTyped="#convertCtoF" style="-fx-padding: 10 20 10 20;" text="0" />
+         <Label layoutX="20.0" layoutY="30.0" text="°C" />
+      </HBox>
+      <HBox alignment="CENTER" layoutX="10.0" layoutY="10.0" prefHeight="57.0" prefWidth="367.0" spacing="20">
+         <padding>
+            <Insets topRightBottomLeft="10" />
+         </padding>
+           <Label text="Stupne Fahrenheita"/>
+            <TextField fx:id="fField" editable="false" onKeyTyped="#convertFtoC" style="-fx-padding: 10 20 10 20;" text="0" />
+            <Label layoutX="57.0" layoutY="30.0" text="°F" />
+      </HBox>
+   </children>
+</VBox>
